--- a/paper/preamble.tex
+++ b/paper/preamble.tex
@@ -1,6 +1,1 @@
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhf{}
-\rhead{Frame Competition}
-\lhead{Berk}
-\cfoot{\thepage}
+\usepackage{bookstabs}
